# YunWei-AI-Platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  coding-principle.md  vercel.json
platform/: Dockerfile  pyproject.toml
platform/app-win/: index.html  package-lock.json
platform/app-win/src/: App.tsx
platform/migrations/: 001_init.sql  002_proxy_log.sql  003_data_layer.sql  004_enterprises.sql
platform/platform_app/: admin.py  admin_api.py  api.py  auth.py  context.py  csrf.py  db.py  entitlements.py  firewall.py  health.py  hmac_sign.py  main.py  proxy.py  response_headers.py  runtime_registry.py  settings.py
platform/platform_app/daily_report/: api.py  markdown_render.py  orchestrator.py  scheduler.py  storage.py
platform/platform_app/data_layer/: __init__.py  api.py  assistant.py  ingest.py  manual.py  silver-canonical.yaml
platform/prompts/: business_card_extraction.md  commercial_extraction.md  customer_ask.md  schema_extraction.md  schema_route.md  wechat_screenshot_extraction.md
platform/static/: admin.html  agents.html  daily-report-detail.html  daily-report.html  data.html  enterprise.html  login.html  register.html
platform/tests/: conftest.py  test_admin_api.py  test_assistant.py  test_auth.py  test_commercial_extractor.py  test_context.py  test_customer_management.py  test_daily_report_api.py  test_daily_report_e2e.py  test_daily_report_markdown_render.py  test_daily_report_orchestrator.py  test_daily_report_pusher_dingtalk.py  test_daily_report_storage.py  test_data_api.py  test_data_pipeline.py  test_db.py  test_dedicated_runtime_auth.py  test_deepseek_schema_extractor_provider.py  test_enterprise_api.py  test_entitlements.py  test_evidence.py  test_extractor_provider_factory.py  test_firewall.py  test_hmac_sign.py  test_identity_extractor.py  test_ingest_auto_flow.py  test_ingest_jobs.py  test_ingest_progress_stream.py  test_ingest_rq_worker.py  test_invite_codes.py  test_landingai_ade_client.py  test_landingai_extract_runner.py  test_landingai_extractor_provider.py  test_landingai_large_parse_jobs.py  test_landingai_normalize.py  test_landingai_schema_registry.py  test_llm_schema_router.py  test_mineru_ocr_provider.py  test_mistral_ocr_client.py  test_mistral_ocr_provider.py  (+16 more)
platform/yinhu_brain/: __init__.py  config.py  db.py
platform/yinhu_brain/api/: ask.py  customer_management.py  ingest.py  read.py
platform/yinhu_brain/models/: __init__.py  contact.py  contract.py  customer.py  customer_memory.py  document.py  field_provenance.py  ingest_job.py  llm_call.py  order.py
platform/yinhu_brain/schemas/: customer.py
platform/yinhu_brain/services/: landingai_ade_client.py  llm.py  match.py  mineru_client.py  mistral_ocr_client.py  prompts.py  qa.py  storage.py
platform/yinhu_brain/workers/: __init__.py  ingest_rq.py  ingest_rq_worker.py
platform/yunwei_win/: __init__.py
platform/yunwei_win/api/: ask.py  customer_management.py  ingest.py  read.py
platform/yunwei_win/assistant/: __init__.py  context.py  dedicated.py  router.py
platform/yunwei_win/models/: __init__.py  contact.py  customer.py  customer_memory.py  field_provenance.py  ingest_job.py  llm_call.py  order.py
platform/yunwei_win/services/: landingai_ade_client.py  storage.py
platform/yunwei_win/workers/: __init__.py  ingest_rq_worker.py
services/platform-api/: Dockerfile  dev_guangtian_backend.py  dev_jintai_backend.py  pyproject.toml
services/platform-api/migrations/: 001_init.sql  002_proxy_log.sql  005_platform_admin.sql  006_drop_user_tenant.sql  007_erp_credentials.sql  008_daily_reports.sql  009_invite_codes.sql  010_runtime_registry.sql  011_enterprise_integrations.sql  012_jintai_production_mvp.sql
services/platform-api/platform_app/: __init__.py  admin.py  admin_api.py  api.py  auth.py  cache.py  context.py  db.py  enterprise_api.py  firewall.py  health.py  hmac_sign.py  integrations.py  jintai_api.py  main.py  observability.py  proxy.py  settings.py  sso.py
services/platform-api/prompts/: commercial_extraction.md  contract_extraction.md  customer_memory_extraction.md  identity_extraction.md  ops_extraction.md  qa.md
services/platform-api/seeds/: 001_jintai_mvp_seed.sql
services/platform-api/static/: admin.html  agents.html  daily-report-detail.html  daily-report.html  login.html  register.html
services/platform-api/tests/: conftest.py  test_admin_api.py  test_assistant.py  test_audio_ingest.py  test_auth.py  test_backend_safety_p1b.py  test_confirm_cards.py  (+85 more)
(+538 files in other folders)
