[project]
name = "platform-app"
version = "1.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "cachetools>=5.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
platform-admin = "platform_app.admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
