[project]
name = "platform-app"
version = "1.4.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "duckdb>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
platform-admin = "platform_app.admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
