[project]
name = "platform-app"
version = "1.4.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "duckdb>=1.1",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "croniter>=2.0",
    "markdown-it-py>=3.0",
    "anthropic>=0.92",
    "pdfplumber>=0.11",
    # yinhu_brain (智通客户) deps — vendored from yunwei-tools.
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.6",
    "pypdf>=5.1",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
platform-admin = "platform_app.admin:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Add the worktree's platform/ directory to sys.path so tests import
# platform_app from the local working tree rather than the editable install
# pointing at the main worktree (which uses a shared .venv).
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship both top-level packages: platform_app (orchestration) and yinhu_brain
# (vendored yunwei-tools backend powering /win/api/*).
packages = ["platform_app", "yinhu_brain"]
